# shanghaoqi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
resources/: app_icon.rc  generate_icon.py  resources.qrc  trae_solo_system_prompt.md
src/: SOURCE_TREE.md  main.cpp
src/adapters/capability/: static_resolver.cpp  static_resolver.h
src/adapters/executor/: qt_executor.cpp  qt_executor.h
src/adapters/inbound/: aisdk.cpp  aisdk.h  anthropic.cpp  anthropic.h  antigravity.cpp  antigravity.h  claudecode.cpp  claudecode.h  codex.cpp  codex.h  gemini.cpp  gemini.h  inbound_adapter.h  jina.cpp  jina.h  multi_router.cpp  multi_router.h  openai_chat.cpp  openai_chat.h  openai_responses.cpp  openai_responses.h
src/adapters/outbound/: anthropic.cpp  anthropic.h  antigravity.cpp  antigravity.h  bailian.cpp  bailian.h  claudecode.cpp  claudecode.h  codex.cpp  codex.h  gemini.cpp  gemini.h  modelscope.cpp  modelscope.h  multi_router.cpp  multi_router.h  openai.cpp  openai.h  openai_compat.cpp  openai_compat.h  outbound_adapter.h  zai.cpp  zai.h
src/config/: config_store.cpp  config_store.h  config_types.h  model_list_request_builder.cpp  model_list_request_builder.h  model_list_utils.h  provider_routing.h
src/core/: bootstrap.cpp  bootstrap.h  log_manager.cpp  log_manager.h  operation_result.h
src/core/interfaces/: i_log_manager.h  i_network_manager.h
src/core/qt/: fluxfix_wrapper.cpp  fluxfix_wrapper.h  log_manager.cpp  log_manager.h  network_manager.cpp  network_manager.h
src/core/std/: fluxfix_wrapper.cpp  fluxfix_wrapper.h
src/pipeline/: middleware.h  pipeline.cpp  pipeline.h
src/pipeline/middlewares/: auth_middleware.cpp  auth_middleware.h  debug_middleware.cpp  debug_middleware.h  model_mapping_middleware.cpp  model_mapping_middleware.h  stream_mode_middleware.cpp  stream_mode_middleware.h
src/platform/: platform_factory.cpp  platform_factory.h
src/platform/interfaces/: i_cert_manager.h  i_config_manager.h  i_hosts_manager.h  i_privilege_manager.h
src/platform/linux/: linux_cert_manager.cpp  linux_cert_manager.h  linux_config_manager.cpp  linux_config_manager.h  linux_hosts_manager.cpp  linux_hosts_manager.h  linux_platform_factory.cpp  linux_platform_factory.h  linux_privilege_manager.cpp  linux_privilege_manager.h
src/platform/macos/: mac_cert_manager.cpp  mac_cert_manager.h  mac_hosts_manager.cpp  mac_hosts_manager.h  mac_privilege_manager.cpp  mac_privilege_manager.h  macos_cert_manager.cpp  macos_cert_manager.h  macos_config_manager.cpp  macos_config_manager.h  macos_hosts_manager.cpp  macos_hosts_manager.h  macos_platform_factory.cpp  macos_platform_factory.h  macos_privilege_manager.cpp  macos_privilege_manager.h
src/platform/windows/: win_cert_manager.cpp  win_cert_manager.h  win_hosts_manager.cpp  win_hosts_manager.h  win_privilege_manager.cpp  win_privilege_manager.h  windows_cert_manager.cpp  windows_cert_manager.h  windows_config_manager.cpp  windows_config_manager.h  windows_hosts_manager.cpp  windows_hosts_manager.h  windows_platform_factory.cpp  windows_platform_factory.h  windows_privilege_manager.cpp  windows_privilege_manager.h
src/proxy/: connection_pool.cpp  connection_pool.h  proxy_server.cpp  proxy_server.h  request_router.cpp  request_router.h  sse_writer.cpp  sse_writer.h
src/semantic/: action.h  capability.h  constraints.h  envelope.h  extension.h  failure.cpp  failure.h  frame.h  policy.cpp  policy.h  ports.h  processor.cpp  processor.h  request.h  response.h  segment.h  stream_session.cpp  stream_session.h  target.h  types.h  validate.cpp  validate.h
src/semantic/features/: stream_aggregator.cpp  stream_aggregator.h  stream_splitter.cpp  stream_splitter.h
src/ui/: config_group_panel.cpp  config_group_panel.h  global_settings_page.cpp  global_settings_page.h  log_panel.cpp  log_panel.h  main_widget.cpp  main_widget.h  runtime_options_panel.cpp  runtime_options_panel.h  test_result_dialog.cpp  test_result_dialog.h  theme.h
tests/: CMakeLists.txt  test_config_manager.cpp  test_hosts_manager.cpp  test_log_manager.cpp  test_network_utils.cpp  test_platform_factory.cpp  tst_aggregator.cpp  tst_anthropic_roundtrip.cpp  tst_cert_manager.cpp  tst_config_store.cpp  tst_hosts_manager.cpp  tst_openai_roundtrip.cpp  tst_pipeline.cpp  tst_policy.cpp  tst_routers.cpp  tst_splitter.cpp  tst_sse_parser.cpp  tst_validate.cpp
